fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,14 @@
   text-align: center;
 }
 
-.lavaButton {
-  
+button {
+  background: #76B3FA;
+  border-radius: 100px;
+  padding: 20px 60px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.45em;
+  margin: 0 15px;
 }
 
 .landing {
